--- a/templates/base.html
+++ b/templates/base.html
@@ -15,11 +15,12 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item"><a class="nav-link" href="{% url "home" %}">Home</a></li>
             {% if user.is_authenticated %}
+                <li class="nav-item"><a class="nav-link" href="{% url "home" %}">Home (Reports)</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url "livechat" %}">LiveChat</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url "logout" %}">Log Out</a></li>
             {% else %}
+                <li class="nav-item"><a class="nav-link" href="{% url "home" %}">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url "login" %}">Login</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url "signup" %}">Sign Up</a></li>
             {% endif %}
